[package]
name = "sensorservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
chrono = {version = "0.4", features = ["serde"]}
influxdb = {version = "0.6", features = ["derive"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {features = ["full"], version = "1"}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
dotenvy = "0"